--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h3>Контактное лицо: Елена</h3>
     <h3>Телефон: 89614220909</h3>
     <h3>email: lenochkam07@gmail.com</h3>
-    <img id="img_logo" src="gruz.png">
+    <!-- <img id="img_logo" src="gruz.png"> -->
     </div>
   
 
