background color white

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <title>ИП Мироненко</title>
     <style>
       body {
-        background-color:#008080; 
+        background-color: white; 
       }
       
       #global-block {
